--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="sunny">#47AB2F</color>
     <color name="cloudy">#54717A</color>
     <color name="rain">#57575D</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
