--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -203,7 +203,7 @@
         android:layout_margin="16dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/fab"
-        android:src="@android:drawable/arrow_up_float"
+        android:src="@drawable/ic_baseline_star_outline_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
