--- a/app/src/main/res/layout/weather_row.xml
+++ b/app/src/main/res/layout/weather_row.xml
@@ -25,7 +25,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="24sp"
-
+      android:textColor="@color/white"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.788"
@@ -37,12 +37,13 @@
       android:id="@+id/textViewPlace"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:textColor="@color/white"
       android:textAppearance="@style/TextAppearance.AppCompat.Headline"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/imageViewTemperatureIcon"
       app:layout_constraintHorizontal_bias="0.033"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      tools:text="Roger Federer" />
+      tools:text="Durban" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
