--- a/app/src/main/res/layout/activity_add_city.xml
+++ b/app/src/main/res/layout/activity_add_city.xml
@@ -1,14 +1,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:padding="16dp"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_width="402dp"
-        android:layout_height="602dp"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="68dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
